<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/pidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/pid" />

    <EditText
        android:id="@+id/budgetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pidText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/budget" />

    <EditText
        android:id="@+id/periodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/budgetText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/period" />

    <EditText
        android:id="@+id/rtPrioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/periodText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/rt_prio" />

    <Button
        android:id="@+id/cancel_budget_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rtPrioText"
        android:layout_centerVertical="true"
        android:text="@string/cancel_budget" />

    <Button
        android:id="@+id/set_budget_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_budget_button"
        android:layout_alignBottom="@+id/cancel_budget_button"
        android:layout_alignLeft="@+id/rtPrioText"
        android:text="@string/set_budget" />

    <TextView
        android:id="@+id/HelloView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

</RelativeLayout>
